--- a/tutorial1.html
+++ b/tutorial1.html
@@ -10,9 +10,11 @@
       integrity="sha512-n8IpKWzDnBOcBhRlHirMZOUvEq2bLRMuJGjuVqbzUJwtTsgwOgK5aS0c1JA647XWYfqvXve8k3PtZdzpipFjgg=="
       crossorigin="anonymous"
     ></script>
-    <script src="./OrbitControls.js"></script>
+    <script src="./lib/OrbitControls.js"></script>
+    <!-- <script src="./lib/ObjectLoader.js"></script> -->
+    <!-- <script src="./lib/GLTFLoader.js"></script> -->
   </head>
   <body>
-    <script src="index.js"></script>
+    <script src="tutorial1.js"></script>
   </body>
 </html>
